--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,15 @@ body {
 }
 
 h1 {
-  margin: 0;
+ /*  margin: 0;
   position: absolute;
-  top: 5%;
+  top: 12%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10%;
 }
 
 .App-header {
