--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
   background-color: #282c34;
+  background-image: url("img/bg.png");
+  background-repeat: repeat;
   color: white;
 }
 
 h1 {
- /*  margin: 0;
+  /*  margin: 0;
   position: absolute;
   top: 12%;
   left: 50%;
@@ -19,13 +24,15 @@ h1 {
   margin-top: 10%;
 }
 
+img {
+  width: 90%;
+  height: auto;
+}
+
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-image: url("img/header.png");
+  background-repeat: no-repeat;
+  background-size: calc(50px + 50rem);
+  min-height: 20vh;
   color: white;
 }
